--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ build/
 /src/main/resources/application-uat.yml
 /src/main/resources/application-prod.yml
 /src/main/resources/application-dev.yml
+
+### persisted local data
+/db
+
